--- a/welcome_to_colab.ipynb
+++ b/welcome_to_colab.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PostudorAlexandru/ProiectSM/blob/main/welcome_to_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "jVVYTkhnGxD3"
       },
       "source": [
@@ -948,7 +958,8 @@
   "metadata": {
     "colab": {
       "name": "P0_Welcome_To_Colaboratory",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
